# felide

./: .appveyor.yml  .gitignore  .gitmodules  Borcfile  Borcfile.yaml  CMakeLists.txt  Project.borc.json  README.md  borc-prototype.py  felide.kdev4  felide.yaml  felmake.py  project.borc
apps/XenoShader.Wtl/: CMakeLists.txt
apps/XenoShader.Wtl/res/: Resource.aps  Resource.rc  resource.h
apps/XenoShader.Wtl/src/: XenoShader.cpp
modules/Xenoide.Core/: CMakeLists.txt
modules/Xenoide.Core/src/: FileService.cpp  FolderService.cpp  OS.cpp  Version.cpp
modules/Xenoide.GUI.Gtk3/: CMakeLists.txt
modules/Xenoide.GUI.Gtk3/src/: DialogManagerGtk.cpp  DocumentGtk.cpp  DocumentHeader.cpp  DocumentManagerGtk.cpp  FolderBrowserGtk.cpp  IDEFrameGtk.cpp  Main.cpp  MainApplication.cpp
modules/Xenoide.GUI.Qt5/: CMakeLists.txt
modules/Xenoide.GUI.Qt5/src/: DialogManagerQt.cpp  DocumentManagerMdiQt.cpp  DocumentMdiSubWindowQt.cpp  FileSearchDialogItemWidgetQt.cpp  FileSearchDialogQt.cpp  FindReplaceDialogQt.cpp  FolderBrowserQt.cpp  IDEFrameQt.cpp  UtilitiesQt.cpp  main_qt5.cpp
modules/Xenoide.Gui/: CMakeLists.txt
modules/Xenoide.Gui.Cocoa/: AppDelegate.m  CMakeLists.txt  MainMenu.xib  MainWindowController.h  MainWindowController.m  MainWindowController.xib  main.m
modules/Xenoide.Gui.Gtk3/: CMakeLists.txt
modules/Xenoide.Gui.Gtk3.Controls/: CMakeLists.txt  README.md
modules/Xenoide.Gui.Gtk3.Controls/src/: Header.cpp
modules/Xenoide.Gui.Gtk3/src/: DocumentGtk.cpp  FolderBrowserGtk.cpp  IDEFrameGtk.cpp  Main.cpp
modules/Xenoide.Gui.Qt5/: CMakeLists.txt
modules/Xenoide.Gui.Qt5/src/: DialogManagerQt.cpp  DocumentManagerMdiQt.cpp  DocumentMdiSubWindowQt.cpp  FileSearchDialogItemWidgetQt.cpp  FileSearchDialogQt.cpp  FindReplaceDialogQt.cpp  FolderBrowserQt.cpp  IDEFrameQt.cpp  UtilitiesQt.cpp  main_qt5.cpp
modules/Xenoide.Gui.Wtl/: CMakeLists.txt  resource.h
modules/Xenoide.Gui.Wtl/res/: Resource.aps  Resource.rc  resource.h
modules/Xenoide.Gui.Wtl/src/: CClassView.cpp  CDialogManager.cpp  CDocument.cpp  CDocumentManager.cpp  CFolderBrowser.cpp  CIdeFrame.cpp  Main.cpp
modules/Xenoide.Gui/src/: DialogManager.cpp  Document.cpp  DocumentManager.cpp  DocumentManagerModel.cpp  DocumentManagerPresenter.cpp  DocumentModel.cpp  DocumentPresenter.cpp  FileFilter.cpp  FileSearchDialog.cpp  FileSearchDialogModel.cpp  FileSearchDialogPresenter.cpp  FindReplaceDialog.cpp  FindReplaceDialogPresenter.cpp  FolderBrowser.cpp  FolderBrowserModel.cpp  FolderBrowserPresenter.cpp  IDEFrame.cpp  IDEFrameModel.cpp  IDEFramePresenter.cpp  Menu.cpp  MenuPanel.cpp  WindowsUtils.cpp
modules/gui-mvp/: CMakeLists.txt
modules/gui-mvp/src/: Document.cpp
sources/felide.core/: CMakeLists.txt
sources/felide.core/src/: FileService.cpp  OS.cpp  Version.cpp
sources/felide.gui/: CMakeLists.txt
sources/felide.gui.qt5/: CMakeLists.txt
sources/felide.gui.qt5/src/: DialogManagerQt.cpp  DocumentManagerMdiQt.cpp  DocumentMdiSubWindowQt.cpp  FileSearchDialogItemWidgetQt.cpp  FindReplaceDialogQt.cpp  FolderBrowserQt.cpp  IDEFrameQt.cpp  UtilitiesQt.cpp  main_qt5.cpp
sources/felide.gui/src/: DialogManager.cpp  Document.cpp  DocumentManager.cpp  DocumentManagerModel.cpp  DocumentManagerPresenter.cpp  DocumentModel.cpp  DocumentPresenter.cpp  FileFilter.cpp  FileSearchDialogModel.cpp  FindReplaceDialog.cpp  FindReplaceDialogPresenter.cpp  FolderBrowser.cpp  FolderBrowserModel.cpp  FolderBrowserPresenter.cpp  IDEFrame.cpp  IDEFrameModel.cpp  IDEFramePresenter.cpp  Menu.cpp  MenuPanel.cpp  WindowsUtils.cpp
sources/qt5-scintilla-poc/: CMakeLists.txt
sources/qt5-scintilla-poc/src/: QMainFrame.cpp
src/Felide.Console/: CMakeLists.txt  ConsoleApp.cpp  ConsoleApp.hpp  Main.cpp
src/Felide.Core/: CMakeLists.txt
src/Felide.Core/Felide/: FileType.cpp  FileType.hpp  FileTypeRegistry.cpp  FileTypeRegistry.hpp  FileUtil.cpp  Language.cpp  Language.hpp  TreeNode.cpp  TreeNode.hpp  Version.cpp  Version.hpp
src/Felide.Core/Felide/POM/: ModuleTarget.cpp  ModuleTarget.hpp  ModuleTargetType.cpp  ModuleTargetType.hpp  Project.cpp  Project.hpp  ProjectParser.cpp  ProjectParser.hpp  ProjectParserMock.cpp  ProjectParserMock.hpp  ProjectParserYaml.cpp  ProjectParserYaml.hpp  Source.cpp  Source.hpp  Target.cpp  Target.hpp  TargetAction.cpp  TargetAction.hpp
src/Felide.Core/Felide/Tasks/: CommandTask.cpp  CommandTask.hpp  DirectoryTask.cpp  DirectoryTask.hpp  LogTask.cpp  LogTask.hpp  SerialTaskPerformer.cpp  SerialTaskPerformer.hpp  Task.cpp  Task.hpp  (+7 more)
src/Felide.UI.GTK3/: CMakeLists.txt  Main.cpp
src/Felide.UI.WTL/: CMakeLists.txt
src/borc.cli/: CMakeLists.txt  Main.cpp  Module.borc.json
src/borc.cli/borc/: Main.cpp
src/borc.core/: BuildService.cpp  BuildService.hpp  CMakeLists.txt  Command.hpp  CommandFactory.hpp  Compiler.cpp  Compiler.hpp  Linker.cpp  Linker.hpp  Module.borc.json  Module.cpp  Module.hpp  Predef.h  ProcessCommand.cpp  Project.cpp  Project.hpp  RunService.cpp  RunService.hpp  Source.hpp  SystemCommand.hpp
src/borc.core/win32/: ProcessRedirector.hpp
src/felcli/: CMakeLists.txt  Main.cpp  Module.borc  target.borc
src/felide-cli/: CMakeLists.txt  CliController.cpp  CliController.hpp  ConsoleApp.cpp  ConsoleApp.hpp  Main.cpp
src/felide-gtk3/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorPanel.cpp  EditorPanel.hpp  Main.cpp  MainApplication.cpp  MainApplication.hpp  MainWindow.cpp  MainWindow.hpp  ProjectExplorer.cpp  ProjectExplorer.hpp
src/felide-win/: CMakeLists.txt  Main.cpp
src/felide.core/: CMakeLists.txt  Module.borc  target.borc
src/felide.core/felide/: ApplicationCore.hpp  Core.cpp  Core.hpp  FileTypeRegistry.cpp  FileTypeRegistry.hpp  Language.cpp  Language.hpp  Predef.hpp  Version.cpp  Version.hpp
src/felide.gui.cocoa/: AppDelegate.m  CMakeLists.txt  Main.mm  MainMenu.xib  MainWindowController.h  MainWindowController.m  MainWindowViewController.h  MainWindowViewController.m  MainWindowViewController.xib  main.m
src/felide.gui.gtk3/: CMakeLists.txt  Main.cpp
src/felide.gui.qt5/: CMakeLists.txt
src/felide.gui.qt5/felide/: Main.cpp  main.cpp  main_qt5.cpp
(+825 files in other folders)
